# -*- makefile -*-
#
# Copyright (c) 2001-2002 The Trustees of Indiana University.  
#                         All rights reserved.
# Copyright (c) 1998-2001 University of Notre Dame. 
#                         All rights reserved.
# Copyright (c) 1994-1998 The Ohio State University.  
#                         All rights reserved.
# 
# This file is part of the LAM/MPI software package.  For license
# information, see the LICENSE file in the top level directory of the
# LAM/MPI source distribution.
#
# $Id: Makefile.am,v 1.16 2003/02/19 04:27:22 jsquyres Exp $
#

include $(top_srcdir)/config/Makefile.options

noinst_LTLIBRARIES	= liblamargs.la
liblamargs_la_SOURCES	= \
			  all_argv.c \
			  all_opt.c \
			  do_args.c \
			  ndi_parse.c \
			  ndi_resolve.c \
			  parse_id.c \
			  pdi_parse.c
