# -*- makefile -*-
#
# Copyright (c) 2001-2003 The Trustees of Indiana University.  
#                         All rights reserved.
# Copyright (c) 1998-2001 University of Notre Dame. 
#                         All rights reserved.
# Copyright (c) 1994-1998 The Ohio State University.  
#                         All rights reserved.
# 
# This file is part of the LAM/MPI software package.  For license
# information, see the LICENSE file in the top level directory of the
# LAM/MPI source distribution.
#
# $Id: Makefile.am,v 1.15 2003/06/30 05:19:30 brbarret Exp $
#

include $(top_srcdir)/config/Makefile.options

noinst_LTLIBRARIES	= liblamfreq.la
liblamfreq_la_SOURCES	= \
			  lfopenfd.c \
			  rf77.c \
			  rfatexit.c \
			  rfaux.c \
			  rfclose.c \
			  rflseek.c \
			  rfopen.c \
			  rfpathfind.c \
			  rfread.c \
			  rfrename.c \
			  rfsimplex.c \
			  rfstat.c \
			  rfstate.c \
			  rfwrite.c
